--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="og:title" content="Little Lemon reservation page"/>
+    <meta name="og:description" content="The Little Lemon reservation page where you can book your table"/>
+    <meta name="og:image" content="C:\Users\Federico\Desktop\Media\LLcameriere.jpg"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
